was using clip path incorrectly and it was not rendering on Safari but have updated and it is displaying correctly

--- a/css/index.css
+++ b/css/index.css
@@ -38,10 +38,10 @@ a {
 
 #headshot-desktop {
   display: none;
-  clip-path: polygon(24% 6%, 100% 0, 100% 78%, 6% 93%, 0 84%, 0 34%);
   height: 120px;
   margin: 20px 0 0 -35px;
   position: absolute;
+  -webkit-clip-path: polygon(24% 6%, 100% 0, 100% 78%, 6% 93%, 0 84%, 0 34%);
   z-index: 99;
 }
 
@@ -58,11 +58,12 @@ a {
 
 #name-banner-container {
   background: linear-gradient(#32748E, #285c71);
-  clip-path: polygon(0 15%, 100% 0, 100% 65%, 0 100%);
+  /* clip-path: polygon(0 15%, 100% 0, 100% 65%, 0 100%); */
   height: 90px;
   margin: 20px 0 0 0;
   max-width: 2000px;
   position: relative;
+  -webkit-clip-path: polygon(0 15%, 100% 0, 100% 65%, 0 100%);
   z-index: 98;
 }
 
@@ -96,20 +97,20 @@ a {
 }
 
 #project-image-1 {
-  clip-path: polygon(0 0, 100% 0, 100% 83%, 83% 100%, 4% 88%);
   position: relative;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 83%, 83% 100%, 4% 88%);
   z-index: 103;
 }
 
 #project-image-2 {
-  clip-path: polygon(94% 0, 100% 18%, 91% 97%, 26% 100%, 0 90%, 0 0);
   position: relative;
+  -webkit-clip-path: polygon(94% 0, 100% 18%, 91% 97%, 26% 100%, 0 90%, 0 0);
   z-index: 101;
 }
 
 #project-image-3 {
-  clip-path: polygon(16% 0, 100% 5%, 100% 37%, 94% 100%, 0 93%, 0 8%);
   position: relative;
+  -webkit-clip-path: polygon(16% 0, 100% 5%, 100% 37%, 94% 100%, 0 93%, 0 8%);
   z-index: 102;
 }
 
@@ -157,7 +158,6 @@ a {
 
 .section-title {
   background-color: #32748E;
-  clip-path: polygon(0 0, 100% 0, 98% 83%, 83% 100%, 4% 99%);
   color: #FFFFFF;
   display: inline-block;
   font-size: 2.25rem;
@@ -165,6 +165,7 @@ a {
   letter-spacing: .1rem;
   margin: 10px 0;
   text-align: center;
+  -webkit-clip-path: polygon(0 0, 100% 0, 98% 83%, 83% 100%, 4% 99%);
   width: 175px;
 }
 
@@ -277,7 +278,7 @@ a {
   }
 
   #headshot {
-    clip-path: polygon(24% 6%, 100% 0, 100% 78%, 6% 93%, 0 84%, 0 34%);
+    -webkit-clip-path: polygon(24% 6%, 100% 0, 100% 78%, 6% 93%, 0 84%, 0 34%);
   }
 
   #name-title {
